--- a/homepage/style.css
+++ b/homepage/style.css
@@ -1,37 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Quicksand:wght@300;400;500&family=Shrikhand&display=swap');
 
 
-
 .hero{
-  height: 50vh;
-  background-color: yellow;
+  height: 90vh;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-image: url("https://www.terdav.com/Content/img/HC/LR_V5/Activite_Environnement/96.jpg");
+  background-image: url("https://images.pexels.com/photos/1835712/pexels-photo-1835712.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-size: cover;
 }
 
-
-h1{font-family: 'Shrikhand';
-flex : white;}
-
-a{font-family: 'Quicksand'}
-
-h2 {font-family: 'Quicksand';}
-h3 {font-family: 'Shrikhand';}
-h4 {font-family: 'Shrikhand' ;  font-size: 24px}
-
-.hero2 {
--webkit-animation: random 30s infinite;
-padding: 1%;
-scroll-behavior: smooth;
+h1 {font-family: 'Shrikhand';
+  color: black;
 }
 
-#ul-menu{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-wrap:wrap;
-  }
+
